--- a/index.html
+++ b/index.html
@@ -379,6 +379,58 @@
             </div>
         </div>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <div class="footer__wrapper">
+            <div class="footer__content-wrapper">
+                <div class="footer__first-col">
+                    <img class="footer__icon" src="img/ask_it_icon.png" alt="">
+                    <p class="footer__text-under-icon">We are AskVote.io. We are a online
+                        platform for operating events effectively.
+                        We're working on a web application for facilitating anonymous
+                        questions and answers sessions. The application is to be used
+                        mainly by corporate and government customers.
+                    </p>
+                </div>
+                <div class="footer__second-col">
+                    <h3 class="footer__title">Useful links</h3>
+                    <ul class="footer__list">
+                        <li class="footer__list-item">Home</li>
+                        <li class="footer__list-item">How it works</li>
+                        <li class="footer__list-item">Terms and conditions</li>
+                        <li class="footer__list-item">Cookies policy</li>
+                        <li class="footer__list-item">Contact Us</li>
+                        <li class="footer__list-item">About us</li>
+                        <li class="footer__list-item">Features</li>
+                        <li class="footer__list-item">Event list</li>
+                    </ul>
+                </div>
+                <div class="footer__third-col">
+                    <h3 class="footer__title">My account</h3>
+                    <ul class="footer__list">
+                        <li class="footer__list-item">New account</li>
+                        <li class="footer__list-item">Open a account</li>
+                        <li class="footer__list-item">Manage</li>
+                        <li class="footer__list-item">Change password</li>
+                        <li class="footer__list-item">Delete account</li>
+                        <li class="footer__list-item">Dashboard</li>
+                    </ul>
+                </div>
+                <div class="footer__fourth-col">
+                    <h3 class="footer__title">We are social</h3>
+                    <div class="footer__icons">
+                        <img class="footer__social-icon" src="img/social(1).png" alt="">
+                        <img class="footer__social-icon" src="img/social(2).png" alt="">
+                        <img class="footer__social-icon" src="img/social-media.png" alt="">
+                        <img class="footer__social-icon" src="img/social.png" alt="">
+                    </div>
+                    <h6 class="footer__subtitle">Subscribe to our newsletter</h6>
+                    <input class="footer__email-address" placeholder="Email address">
+                </div>
+            </div>
+            <div class="footer__rights-reserved-container">
+                <h6 class="footer__rights-reserved">© 2016 AskVote.io, all rights received</h6>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
