changes for firefox

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                     <div class="about-us__text-container about-us-text">
                         <h1 class="about-us-text__title interaction__title">Who we are?</h1>
                         <h3 class="about-us-text__subtitle interaction__subtitle">What we can do for you</h3>
-                        <div class="line blue-line"></div>
+                        <div class="about-us-text__line line blue-line"></div>
                         <p class="about-us-text__text interaction__text">it’s never been easier to connect with people who speak this language. They
                             want others to build up their self-image and confidence, and digital connectivity
                             creates ample opportunity to tell your
@@ -350,7 +350,7 @@
                         </p>
                     </div>
                     <div class="about-us__circles">
-                        <div class="circle-container stats audience-served">
+                        <div class="circle-container stats">
                             <div class="stats__outer-circle green-transparent-line">
                                 <div class="stats__inner-circle green-line"></div>
                             </div>
@@ -358,7 +358,7 @@
                             <p class="stats__name">audience served</p>
                             <div class="full-line green-line"></div>
                         </div>
-                        <div class="circle-container stats audience-served">
+                        <div class="circle-container stats">
                             <div class="stats__outer-circle red-transparent-line">
                                 <div class="stats__inner-circle red-line"></div>
                             </div>
@@ -366,7 +366,7 @@
                             <p class="stats__name">hours of service</p>
                             <div class="full-line red-line"></div>
                         </div>
-                        <div class="circle-container stats audience-served">
+                        <div class="circle-container stats">
                             <div class="stats__outer-circle orange-transparent-line">
                                 <div class="stats__inner-circle orange-line"></div>
                             </div>
