--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
             </div>
             <nav class="nav__list-container">
                 <ul class="nav__list nav-list">
-                    <li class="nav-list__element"><a href="#header"><p>Home</p></a></li>
-                    <li class="nav-list__element"><a href="#how-it-works"><p>How it works</p></a></li>
-                    <li class="nav-list__element"><a href="#features"><p>Features</p></a></li>
-                    <li class="nav-list__element"><a href="#partners"><p>Partners</p></a></li>
-                    <li class="nav-list__element"><a href="#events"><p>Events</p></a></li>
-                    <li class="nav-list__element"><a href="#about-us"><p>About us</p></a></li>
+                    <li class="nav-list__element"><a class="nav-list__href" href="#header"><p class="nav-list__text">Home</p></a></li>
+                    <li class="nav-list__element"><a class="nav-list__href" href="#how-it-works"><p class="nav-list__text">How it works</p></a></li>
+                    <li class="nav-list__element"><a class="nav-list__href" href="#features"><p class="nav-list__text">Features</p></a></li>
+                    <li class="nav-list__element"><a class="nav-list__href" href="#partners"><p class="nav-list__text">Partners</p></a></li>
+                    <li class="nav-list__element"><a class="nav-list__href" href="#events"><p class="nav-list__text">Events</p></a></li>
+                    <li class="nav-list__element"><a class="nav-list__href" href="#about-us"><p class="nav-list__text">About us</p></a></li>
                 </ul>
             </nav>
             <ul class="nav__log-reg log-reg">
